--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,9 @@ functions = "functions"
   to = "/.netlify/functions/:splat"
   status = 200
   force = true
+
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
