--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,17 @@ functions = "functions"
 
 [[redirects]]
   from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/api/*"
   to = "https://formbucket.com/:splat"
   status = 200
   force = true
+
+  [[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
