--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,8 @@ functions = "functions"
   to = "/.netlify/functions/:splat"
   status = 200
   force = true
+
+[[headers]]
+    for = "/*"
+    [headers.values]
+        Access-Control-Allow-Origin = "*"
