--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "europisos-v2-8242e23c56fba3ffb7fa403b06",
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-img": "^0.10.0",
+    "@11ty/eleventy": "2.0.1",
+    "@11ty/eleventy-img": "2.0.0",
     "archiver": "^5.2.0",
     "extract-zip": "^2.0.1",
     "lodash.chunk": "^4.2.0",
